// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountFormatter /> should render component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  color: ticker;
}

<div>
  <span>
    <div
      class="c0"
      style="display: inline-flex; white-space: nowrap;"
    >
      456.542341274
    </div>
    <span
      class="c1"
    >
      <span
        class="notranslate"
        translate="no"
      >
         ROSE
      </span>
    </span>
  </span>
</div>
`;

exports[`<AmountFormatter /> should render component with small ticker 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  font-size: 12px;
  line-height: 18px;
  color: ticker;
  font-weight: 600;
}

<div>
  <span>
    <div
      class="c0"
      style="display: inline-flex; white-space: nowrap;"
    >
      456.542341274
    </div>
    <span
      class="c1"
    >
      <span
        class="notranslate"
        translate="no"
      >
         ROSE
      </span>
    </span>
  </span>
</div>
`;
